--- a/gallery.html
+++ b/gallery.html
@@ -65,7 +65,7 @@
     </footer>
 
     <!-- font awesome script -->
-    <<script src="https://kit.fontawesome.com/9b8ea8d8e5.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
