--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,7 +22,7 @@
                     <a href="#">Sign Up</a>
                 </li>
                 <li>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="#">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -139,7 +139,7 @@
     </footer>
 
     <!-- font awesome script  -->
-    <script src="https://kit.fontawesome.com/9b8ea8d8e5.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
